# HAM_Flight

ctrl_node/config/: ctrl_param.yaml
ctrl_node/include/: controller.hpp  fsm_nodelet.hpp  input.hpp  param.hpp
ctrl_node/launch/: run_ctrl.launch
ctrl_node/src/: controller.cpp  ctrl_fsm.cc  ctrl_nodelet.cpp  input.cpp  param.cpp
estimator/: CMakeLists.txt  nodelet_plugin.xml  package.xml
estimator/config/: odom_param.yaml  rviz_sim.rviz  trajectory_formula.md
estimator/include/: filter.hpp
estimator/launch/: add_bias.launch
estimator/src/: add_traj_bias.cpp
quadrotor_msgs/: CMakeLists.txt
realflight_utils/: CMakeLists.txt
realflight_utils/config/: traj_analyse.yaml
realflight_utils/include/: ekf.hpp
sh_utils/: RTK.sh  RTK_control.sh  RTK_remap.sh  RTK_traj.sh  control.sh  record.sh  sim_traj_follow.sh  takeoff.sh  vrpn.sh
